collapsed menu expands on mobile margins fixed

--- a/web/assets/css/global.css
+++ b/web/assets/css/global.css
@@ -27,77 +27,28 @@ body {
   vertical-align: text-bottom;
 }
 
-/*
- * Sidebar
- */
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-}
-
-.sidebar-sticky {
-  position: relative;
-  top: 0;
-  height: calc(100vh - 48px);
-  padding-top: .5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-}
-
-@supports ((position: -webkit-sticky) or (position: sticky)) {
-  .sidebar-sticky {
-    position: -webkit-sticky;
-    position: sticky;
-  }
-}
-
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #333;
-}
-
-.sidebar .nav-link .feather {
-  margin-right: 4px;
-  color: #999;
-}
-
-.sidebar .nav-link.active {
-  color: #007bff;
-}
-
-.sidebar .nav-link:hover .feather,
-.sidebar .nav-link.active .feather {
-  color: inherit;
-}
-
-.sidebar-heading {
-  font-size: .75rem;
-  text-transform: uppercase;
-}
 
 /*
  * Content
  */
 
 [role="main"] {
-  padding-top: 133px; /* Space for fixed navbar */
+  padding-top: 2%; /* Space for fixed navbar */
+  padding-left: 2%!important;
+  padding-right: 2%!important;
 }
 
 @media (min-width: 768px) {
   [role="main"] {
-    padding-top: 48px; /* Space for fixed navbar */
+    padding-top: 2%; /* Space for fixed navbar */
+    padding-left: 2%!important;
+    padding-right: 2%!important;
   }
 }
 
-body > div:nth-child(1) > nav > div > div:nth-child(2) > button {
-  margin-left: -4rem;
-  margin-right: -4rem;
+.navbar-nav > li{
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .modal-sm {
@@ -109,3 +60,4 @@ body > div:nth-child(1) > nav > div > div:nth-child(2) > button {
 .modal-lg {
   max-width: 80% !important;
 }
+
